sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:15: error: not found: value fin2
    fin2=true
    ^